fix raw part of template

--- a/templates/backup_server.j2
+++ b/templates/backup_server.j2
@@ -41,7 +41,9 @@ function dorotate() {
     fi
 
     local -a ROTATECOUNT=($(seq $ROTATE -1 1))
-    length={% raw -%}${#ROTATECOUNT[@]}{% endraw -%}
+    {% raw -%}
+    length=${#ROTATECOUNT[@]}
+    {% endraw -%}
     [ $length -eq 0 ] && return
 
     echo "dorotate: $ROTATEDIR $ROTATEMETHOD ..." >> "$LOGFILE"
