do not use thies strange include/exclude hack for rsync, simply prefere the usage of -R

--- a/templates/backup_client.j2
+++ b/templates/backup_client.j2
@@ -49,7 +49,11 @@ done
 # real backup
 # you can test the sending command by running
 #  rsync -avz -e'ssh -v'  --delete root@srv:/etc/ root@srv:/.../ /tmp/x/ 2>&1 | grep "Sending command"
-rsync --server --sender -vlogDtprze.iLsfxC . / 2>>"$LOGFILE"
+rsync --server --sender -vlogDtprRze.iLsfxC . \
+	{{ backup_client_dirs | join(' ') }} \
+	{% if backup_client_databases -%} /var/tmp/backup-databases/ \{% endif -%}
+	2>>"$LOGFILE"
+
 EXITCODE=$((EXITCODE+$?))
 echo "EXITCODE=$EXITCODE after rsync" >>"$LOGFILE"
 
