fixed typo in var name

--- a/templates/backup_client.j2
+++ b/templates/backup_client.j2
@@ -47,7 +47,7 @@ echo "EXITCODE=$EXITCODE after '"'{{ pattern }}'"'" >>"$LOGFILE"
 # end of backup_client_exec_pre block
 {% endif %}
 
-{% if backup_client_pve is defined and backpup_client_pve %}
+{% if backup_client_pve is defined and backup_client_pve %}
 # start backup_client_pve block
 
 {% if backup_client_pve_mountpoint not in backup_client_dirs %}
@@ -124,7 +124,7 @@ rsync --server --sender -vlogDtprRze.iLsfxC . \
 EXITCODE=$((EXITCODE+$?))
 echo "EXITCODE=$EXITCODE after rsync" >>"$LOGFILE"
 
-{% if backup_client_pve is defined and backpup_client_pve %}
+{% if backup_client_pve is defined and backup_client_pve %}
 # start clanup backup_client_pve block
 {% for pvehost, pvecfg in backup_client_pve.items() | list -%}
 # pvehost {{ pvehost }}
