fixed client script

--- a/templates/backup_client.j2
+++ b/templates/backup_client.j2
@@ -60,7 +60,7 @@ declare -r VGNAME=$(pvesh get /storage/local-lvm --noheader --noborder | sed '/^
 
 {% for pvehost, pvecfg in backup_client_pve.items() | list -%}
 # pvehost {{ pvehost }}
-LCXHOSTNAME=$(pct config {{ pvecfg.lcx_id }} | sed '/^hostname:/!d;s/^hostname: *//g'
+LCXHOSTNAME=$(pct config {{ pvecfg.lcx_id }} | sed '/^hostname:/!d;s/^hostname: *//g')
 echo "start container {{ pvecfg.lcx_id }} $LCXHOSTNAME ..." >>"$LOGFILE"
 if [ "$(pct status {{ pvecfg.lcx_id }} | awk '{print $2}')" = "running" ]; then
 {% for pctexec in pvecfg.lcx_commands | default([]) %}
@@ -128,7 +128,7 @@ echo "EXITCODE=$EXITCODE after rsync" >>"$LOGFILE"
 # start cleanup backup_client_pve block
 {% for pvehost, pvecfg in backup_client_pve.items() | list -%}
 # pvehost {{ pvehost }}
-LCXHOSTNAME=$(pct config {{ pvecfg.lcx_id }} | sed '/^hostname:/!d;s/^hostname: *//g'
+LCXHOSTNAME=$(pct config {{ pvecfg.lcx_id }} | sed '/^hostname:/!d;s/^hostname: *//g')
 echo "start cleanup for container {{ pvecfg.lcx_id }} $LCXHOSTNAME ..." >>"$LOGFILE"
 # register lvm devices
 LVMS=$(findmnt -o SOURCE -n -R -y -c --mountpoint {{ backup_client_pve_mountpoint }}/${LCXHOSTNAME})
