remove logical volumes left over after a forced stop etc.

--- a/templates/backup_client.j2
+++ b/templates/backup_client.j2
@@ -58,6 +58,11 @@ exit 10
 mkdir -p {{ backup_client_pve_mountpoint }}
 declare -r VGNAME=$(pvesh get /storage/local-lvm --noheader --noborder | sed '/^vgname /!d;s/^vgname\s*//g')
 
+# cleanup old snapshot LVMs nonintrusive
+for LVP in $(lvdisplay | grep 'LV Path' | grep _-backup_client_pve_ | awk '{print $3}'); do
+	lvremove $LVP
+done
+
 {% for pvehost, pvecfg in backup_client_pve.items() | list -%}
 # pvehost {{ pvehost }}
 LCXHOSTNAME=$(pct config {{ pvecfg.lcx_id }} | sed '/^hostname:/!d;s/^hostname: *//g')
