--- a/templates/backup_client.j2
+++ b/templates/backup_client.j2
@@ -72,30 +72,26 @@ if [ "$(pct status {{ pvecfg.lcx_id }} | awk '{print $2}')" = "running" ]; then
 	if [ -z "$ROOTFS" ]; then
 		echo "unable to deterim ROOTFS for $LCXHOSTNAME ({{ pvecfg.lcx_id }})" >>"$LOGFILE"
 		EXITCODE=$((EXITCODE+11))
-		{% if backup_client_pve_lcx_exitonerror %}
-		exit 11
-		{% endif %}
+		{% if backup_client_pve_lcx_exitonerror %}exit 11{% endif -%}
 	elif $(pct listsnapshot {{ pvecfg.lcx_id }} | grep  -q "\-> vm-{{ pvecfg.lcx_id }}-backup_client_pve "); then
 		echo "ERROR: snapshot vm-{{ pvecfg.lcx_id }}-backup_client_pve exists for {{ pvecfg.lcx_id }} $LCXHOSTNAME" >>"$LOGFILE"
 		EXITCODE=$((EXITCODE+11))
-		{% if backup_client_pve_lcx_exitonerror %}
-		exit 11
-		{% endif %}
+		{% if backup_client_pve_lcx_exitonerror %}exit 11{% endif -%}
 	else
-	{% for pctexec in pvecfg.lcx_commands | default([]) %}
+		{% for pctexec in pvecfg.lcx_commands | default([]) -%}
 		pct exec {{ pvecfg.lcx_id }} -- {{ pctexec }} >> "$LOGFILE" 2>&1
 		EXITCODE=$((EXITCODE+$?))
 		echo "EXITCODE=$EXITCODE after '"'{{ pctexec }}'"'" >>"$LOGFILE"
-	{% endfor %}{# end pctexec #}
-	{% if pvecfg.lcx_suspend | default(false) %}
+		{% endfor %}{# end pctexec -#}
+		{% if pvecfg.lcx_suspend | default(false) -%}
 		pct suspend {{ pvecfg.lcx_id }} >> "$LOGFILE" 2>&1
 		EXITCODE=$((EXITCODE+$?))
 		echo "EXITCODE=$EXITCODE after pct suspend" >>"$LOGFILE"
-	{% else %}
+		{% else -%}
 		pct shutdown {{ pvecfg.lcx_id }} >> "$LOGFILE" 2>&1
 		EXITCODE=$((EXITCODE+$?))
 		echo "EXITCODE=$EXITCODE after pct shutdown" >>"$LOGFILE"
-	{% endif %}{# end suspend/shutdown #}
+		{% endif %}{# end suspend/shutdown -#}
 		# handle disks
 		set -e
 		# for now, we just support local-lvm
@@ -107,7 +103,7 @@ if [ "$(pct status {{ pvecfg.lcx_id }} | awk '{print $2}')" = "running" ]; then
 			mount -o ro /dev/${VGNAME}/${d}-backup_client_pve {{ backup_client_pve_mountpoint }}/${LCXHOSTNAME}${m} >>"$LOGFILE" 2>&1
 		done < <(pct config {{ pvecfg.lcx_id }} | sed '/^mp[0-9]: local-lvm:/!d; s/^mp[0-9]: local-lvm://g; s/,mp=/ /g; s/,.*//g')
 		set +e
-	{% if pvecfg.lcx_suspend | default(false) %}
+		{% if pvecfg.lcx_suspend | default(false) -%}
 		pct resume {{ pvecfg.lcx_id }} >> "$LOGFILE" 2>&1
 		EXITCODE=$((EXITCODE+$?))
 		echo "EXITCODE=$EXITCODE after pct resume" >>"$LOGFILE"
@@ -119,7 +115,7 @@ if [ "$(pct status {{ pvecfg.lcx_id }} | awk '{print $2}')" = "running" ]; then
 			echo "EXITCODE=$EXITCODE after pct resume" >>"$LOGFILE"
 			sleep 5
 		fi
-	{% else %}
+		{% else -%}
 		pct start {{ pvecfg.lcx_id }} >> "$LOGFILE" 2>&1
 		EXITCODE=$((EXITCODE+$?))
 		echo "EXITCODE=$EXITCODE after pct start" >>"$LOGFILE"
@@ -131,15 +127,13 @@ if [ "$(pct status {{ pvecfg.lcx_id }} | awk '{print $2}')" = "running" ]; then
 			echo "EXITCODE=$EXITCODE after pct start" >>"$LOGFILE"
 			sleep 5
 		fi
-	{% endif %}{# end resume/start #}
+		{% endif %}{# end resume/start -#}
 		pct status {{ pvecfg.lcx_id }} >>"$LOGFILE" 2>&1
 	fi # end checks and prepare container
 else
 	echo "ERROR: lcx_id {{ pvecfg.lcx_id }} is not running" >>"$LOGFILE"
 	EXITCODE=$((EXITCODE+12))
-	{% if backup_client_pve_lcx_exitonerror %}
-	exit 12
-	{% endif %}
+	{% if backup_client_pve_lcx_exitonerror %}exit 12{% endif -%}
 fi
 echo "container snap mount {{ pvecfg.lcx_id }} done" >>"$LOGFILE"
 {% endfor -%}{# end for pvehost, pvecfg in backup_client_pve.items() | list -#}
